src/snapshots/tvision__frame__tests__snapshot_passive_frame.snap
---
source: src/frame.rs
expression: screen.snapshot()
---
size: 20x6
cursor: hidden
text:
|┌────── Edit ──────┐|
|│                  │|
|│                  │|
|│                  │|
|│                  │|
|└──────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(7) bg=BIOS(1)
